Version 1.1

-   Add Student ID Report.

-   Fixed error at login screen where IP array would return an error on Win XP
    machines with only an Ethernet Card.

-   Added Class Ranking Report.

-   Include Manage School menu option.

-   Add Simple class list report.

-   Add class Rank report.

-   Add title and assessment date to the Excel Grade Book export

-   Add Minimum, maximum and average functions to class grade book.

-   Add check to see if grade entered for student is more than the maximum
    points.

-   Include timeout field to "Edit User."

-   Added class size distribution report.

-   Added gender breakdown report.

-   Added demerit module.

-   Add Demerits Reports.

-   Add Student Status field to edit student.